give a minimum width to the container to avoid content overlapping

--- a/main.css
+++ b/main.css
@@ -20,6 +20,7 @@ body {
     left: 50%;
     transform: translate(-50%,-50%);
     width: 50%;
+    min-width: 500px;
     background-color:#FAFAFA;
     text-align: center;
     border-radius: 4px;
@@ -83,5 +84,16 @@ body {
   width: 100px;
 }
 
+@media screen and (max-width: 600px) {
+  .container {
+    width: 60%;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .container {
+    width: 85%;
+  }
+}
 
 
